[gd_scene load_steps=11 format=1]

[ext_resource path="res://rcos/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://widget_grid/widget_grid_editor/widget_grid_editor_gui.gd" type="Script" id=2]
[ext_resource path="res://widget_grid/widget_grid_control/widget_grid_control.tscn" type="PackedScene" id=3]
[ext_resource path="res://widget_grid/widget_grid_editor/reshape_grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://widget_grid/graphics/icons/add_widget.png" type="Texture" id=5]
[ext_resource path="res://widget_grid/graphics/icons/edit_widget.png" type="Texture" id=6]
[ext_resource path="res://widget_grid/graphics/button_focus.tres" type="StyleBox" id=7]
[ext_resource path="res://widget_grid/widget_factories_panel/widget_factories_panel.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.552941, 0.262745, 0.262745, 1 )
light_color = Color( 0.862745, 0.360784, 0.360784, 1 )
dark_color = Color( 0.305882, 0.145098, 0.145098, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.552941, 0.262745, 0.262745, 1 )
light_color = Color( 0.305882, 0.145098, 0.145098, 1 )
dark_color = Color( 0.862745, 0.360784, 0.360784, 1 )
border_size = 2
border_blend = true
draw_bg = true

[node name="widget_grid_editor_gui" type="ColorFrame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.480469, 0.480469, 0.480469, 1 )
script/script = ExtResource( 2 )

[node name="grid_area" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0

[node name="grid_control" parent="grid_area" instance=ExtResource( 3 )]

anchor/right = 1
anchor/bottom = 1
margin/right = 0.0
margin/bottom = 0.0

[node name="reshape_controls" type="Control" parent="grid_area"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="reshape_grid" parent="grid_area" instance=ExtResource( 4 )]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
margin/right = 0.0
margin/bottom = 0.0

[node name="button_area" type="Panel" parent="."]

editor/display_folded = true
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0

[node name="add_widget_button" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="edit_widgets_button" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 40.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[node name="save_button" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="load_button" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="fullscreen_button" type="Button" parent="button_area"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "FS"
flat = false

[node name="edit_buttons" type="Control" parent="button_area"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 40.0

[node name="raiselower" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "R/L"
flat = false

[node name="reshape" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rshp"
flat = false

[node name="rotate" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 80.0
margin/bottom = 80.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rot"
flat = false

[node name="delete" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 40.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Del"
flat = false

[node name="configure" type="Button" parent="button_area/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 40.0
margin/right = 120.0
margin/bottom = 80.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Conf"
flat = false

[node name="widget_factories_panel" parent="." instance=ExtResource( 8 )]

visibility/visible = false


